# BITPAL

./: CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac  libbitpalconsensus.pc.in
build_msvc/: .gitignore  README.md  bitpal.sln  bitpal_config.h  libsecp256k1_config.h  msvc-autogen.py
ci/: test_run_all.sh
contrib/: README.md  bitpal-cli.bash-completion  bitpal-qt.pro  bitpal-tx.bash-completion  bitpald.bash-completion  filter-lcov.py  gitian-build.py  install_db4.sh  valgrind.supp
depends/: README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  bitpal-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  bitpal-cli.1  bitpal-qt.1  bitpal-tx.1  bitpal-wallet.1  bitpald.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addrman.cpp  (+142 more)
(+974 files in other folders)
