dist_man1_MANS=

if BUILD_BITPALD
  dist_man1_MANS+=bitpald.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitpal-qt.1
endif

if BUILD_BITPAL_CLI
  dist_man1_MANS+=bitpal-cli.1
endif

if BUILD_BITPAL_TX
  dist_man1_MANS+=bitpal-tx.1
endif

if ENABLE_WALLET
if BUILD_BITPAL_WALLET
  dist_man1_MANS+=bitpal-wallet.1
endif
endif
